tests/paczka1/small_fuzzy/65069623.err
Error in line 2: KmugKMB S362 74,0
Error in line 11: KmugKMB A780 56,4
